creating about page

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,13 @@
   --button-text: #1E1E1E;
   --cursor-bg: #fc6492;
 }
+[data-theme="white"]{
+  --bg-color: #FFFFFF; 
+  --text-color: #1E1E1E;
+  --button-bg: #F9B8CB;
+  --button-text: #1E1E1E;
+  --cursor-bg: #fc6492;
+}
 
 body {
   background-color: var(--bg-color);
