--- a/app/globals.css
+++ b/app/globals.css
@@ -112,4 +112,11 @@ body {
     transform-origin: 50% 50% -150px !important;
     will-change: opacity, transform;
   }
+  .animated-text {
+    @apply  opacity-0; 
+    transform: translate3d(0, 80px, -100px) rotateY(10deg) rotateX(20deg);
+    transform-origin: center bottom;
+    will-change: opacity, transform;
+  }
+  
 }
